@@ -597,7 +597,8 @@ INPUT                  = ./doc.h \
                          ./page_license.h \
                          ../lib/ \
                          ../uidescription/ \
-                         ./page_keyeventflow.h
+                         ./page_keyeventflow.h \
+                         ../plugin-bindings/
 
 # This tag can be used to specify the character encoding of the source files 
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is 
@@ -664,7 +665,8 @@ RECURSIVE              = YES
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
 EXCLUDE                = ../uidescription/expat/ \
-                         ../tutorial
+                         ../tutorial \
+                         ../tests/
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or 
 # directories that are symbolic links (a Unix filesystem feature) are excluded 
@@ -678,10 +680,7 @@ EXCLUDE_SYMLINKS       = NO
 # against the file with absolute path, so to exclude all test directories 
 # for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = */aeffguieditor.* \
-                         */plugguieditor.* \
-                         */cocoasupport.* \
-                         */winfileselector.*
+EXCLUDE_PATTERNS       = 
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names 
 # (namespaces, classes, functions, etc.) that should be excluded from the 
